# commandfile-argo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/commandfile_argo/: generator.py
tests/: test_generator.py
